# scaffolding

./: Cargo.toml  README.md  build.rs
proto/: http_client.proto  models.proto  rest_client.proto
src/: http.rs  main.rs  protos.rs  rest.rs
