[package]
name = "scaffolding"
version = "0.1.0"
authors = ["Alex P. <alexeek@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio + gRPC
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }

# Twilight
twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
tracing-subscriber = "0.2.16"
tracing = "0.1.25"

[build-dependencies]
tonic-build = "0.4"
