[package]
name = "scaffolding"
version = "0.1.0"
authors = ["Alex P. <alexeek@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio + gRPC
tonic = "0.6.1"
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "sync"] }

# Twilight
twilight-cache-inmemory = "0.7.2"
twilight-gateway = "0.7.1"
twilight-http = "0.7.2"
twilight-model = "0.7.2"
tracing-subscriber = "0.3.3"
tracing = "0.1.29"

[build-dependencies]
tonic-build = "0.6.0"
